--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,6 @@
 name: check
 on:
+  workflow_dispatch:
   pull_request:
   push:
     branches:
@@ -13,6 +14,6 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: 'gradle'
       - name: Check
-        run: ./gradlew test
+        uses: gradle/gradle-build-action@v2
+        arguments: check
