--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - master
 jobs:
-  run-test:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
