--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,10 +14,12 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Publish to Docker Hub
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: |
-            jib
-            -Djib.auth.username=${{ secrets.DOCKER_USERNAME }}
-            -Djib.auth.password=${{ secrets.DOCKER_PASSWORD }}
+          arguments: jib
