Switch to slf4k

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 jib = { id = "com.google.cloud.tools.jib", version = "3.3.1" }
 [libraries]
 kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.5.0" }
-slf4j = { module = "org.slf4j:slf4j-api", version = "2.0.7" }
+slf4k = { module = "dev.ocpd.slf4k:slf4k", version = "0.1.0" }
 logback-core = { module = "ch.qos.logback:logback-core", version.ref = "logback" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 jda = { module = "net.dv8tion:JDA", version = "5.0.0-beta.8" }
