--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,10 @@
-name: publish
+name: Publish
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [check]
-    types: [completed]
-    branches: [master]
+    workflows: [ check ]
+    types: [ completed ]
+    branches: [ master ]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -22,4 +22,4 @@ jobs:
       - name: Publish to Docker Hub
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: jib
+          arguments: jib --image=${{ github.repository }}:latest
