--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,11 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - uses: gradle/actions/wrapper-validation@v3
+
       - uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Check
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: check
+
+      - uses: gradle/actions/setup-gradle@v3
+
+      - run: ./gradlew check
