--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,15 +14,10 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+      - uses: gradle/actions/setup-gradle@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Publish to Docker Hub
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            jib
-            --image=${{ github.repository }}
-            -Djib.to.tags=latest,${{ github.sha }}
+      - run: ./gradlew jib --image=${{ github.repository }} -Djib.to.tags=latest,${{ github.sha }}
